smoother image transitions (image elements are added hidden to page), no longer stretching images (fitting max correct size by aspct ratio onto screen without scroll bar)

--- a/style.css
+++ b/style.css
@@ -3,13 +3,46 @@ html, body, .img-container {
   margin: 0;
 }
 body {
-  background: #333;
+  background: #000000;
 }
-img {
+.img-container {
+  position: relative;
+  width: 100%;
+}
+.img-container img {
+  display: none;
+}
+img.main {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  margin: auto;
   position: absolute;
   top: 0;
-  width: 100%;
   left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.thumbnail-container {
+  position: fixed;
+  top: 0;
+  right: calc(25% + 40px);
+  bottom: 0;
+  overflow-y: auto;
+  width: 100px;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.thumbnails {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.thumbnail-container .thumbnails img.selected {
+  border: 2px solid blue;
 }
 
 .sidebar {
